Fix tooltip visibility and add types to states

--- a/source/_sass/_table.scss
+++ b/source/_sass/_table.scss
@@ -70,6 +70,28 @@ table {
     }
   }
 
+  .state-types {
+    text-align: center;
+    td {
+      background-color: lighten($dark-blue, 10);
+      color: white;
+      padding: 10px;
+      @include breakpoint($small-only) {
+        padding: 5px;
+        font-size: .65rem;
+      }
+      span {
+        text-transform: uppercase;
+        font-weight: 600;
+        padding: 20px;
+        @include breakpoint($small-only) {
+          padding: 10px;
+          font-size: .65rem;
+        }
+      }
+    }
+  }
+
   .title-leading {
     width: 38%;
     &--desktop {
@@ -150,6 +172,14 @@ table {
       }
     }
     &__state {
+      .state-abbrev {
+        position: relative;
+      }
+
+      .leading-type {
+        font-size: 1rem;
+        position: absolute;
+      }
       color: $primary-green;
       font-size: 3.9rem;
       font-weight: bold;
@@ -213,6 +243,10 @@ table {
         border-radius: 5px;
         padding: 5px 6px 5px 6px;
       }
+      .promising-type {
+        color: darken($primary-orange, 30);
+        padding-left: 5px;
+      }
       &--desktop {
         display: none;
         @include breakpoint($large) {
@@ -235,22 +269,22 @@ table {
 }
 
 .tooltip {
-  cursor: auto;
-  display: inline;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 95%;
-  transform: translateY(-50%);
   background: #404040;
-  padding: 15px;
-  width: 100%;
+  cursor: auto;
+  color: white;
+  display: none;
+  left: 95%;
+  top: 50%;
   max-width: 320px;
   min-width: 320px;
-  z-index: 2;
-  transition: all .3s ease-in-out;
   opacity: 0;
-  display: none;
+  padding: 15px;
+  position: absolute;
+  transition: all .3s ease-in-out;
+  transform: translateY(-50%);
+  visibility: hidden;
+  width: 100%;
+  z-index: 2;
   @include breakpoint($medium-only) {
     display: none!important;
   }
